--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.0.+'
-    compile 'com.github.ozodrukh:RippleDrawable:2.0.0'
+    compile 'com.balysv:material-ripple:1.0.2'
 }
