--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,8 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.3.0'
@@ -17,10 +15,8 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
     }
 }
 
