testando submodules do git

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,5 +20,7 @@
             </intent-filter>
         </activity>
     </application>
+    
+    <permission android:name="android.permission.INTERNET" />
 
 </manifest>
