--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".question.controller.FullscreenActivity"
+            android:name=".question.service.download.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme" >
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".question.service.download.CarroActivity"
+            android:launchMode="singleTop"></activity>
+
+        <activity android:name=".question.service.questions.QuestoesActivity"
+            android:launchMode="singleTop"></activity>
     </application>
     
     <uses-permission android:name="android.permission.INTERNET" />
