--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Tue Nov 03 13:30:54 BRST 2015
+#systemProp.http.proxyHost=localhost
+#systemProp.http.proxyPort=3128
+#systemProp.http.nonProxyHosts=*.nonproxyrepos.com|localhost
+#systemProp.https.proxyHost=localhost
+#systemProp.https.proxyPort=3128
+#systemProp.https.nonProxyHosts=*.nonproxyrepos.com|localhost
