--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
 
         <activity android:name=".question.service.questions.QuestoesActivity"
             android:launchMode="singleTop"></activity>
+
+        <activity android:name=".question.controller.FullscreenActivity"
+            android:launchMode="singleTop"></activity>
     </application>
     
     <uses-permission android:name="android.permission.INTERNET" />
