--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.CompactMenu" >
         <activity
             android:name=".question.service.download.MainActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme" >
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,6 +25,7 @@
             android:launchMode="singleTop"></activity>
 
         <activity android:name=".question.controller.FullscreenActivity"
+            android:theme="@style/Theme.AppCompat"
             android:launchMode="singleTop"></activity>
     </application>
     
