--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.0.+'
+    compile 'com.google.dexmaker:dexmaker:1.1'
+    compile 'org.easymock:easymock:3.4'
 }
