--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,16 +32,14 @@ android {
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.9.5'
+    testCompile 'org.easymock:easymock:3.4'
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'org.easymock:easymock:3.4'
-    androidTestCompile "com.google.dexmaker:dexmaker:1.1"
     compile 'com.google.code.gson:gson:2.2.+'
     compile project(':volley')
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.0.+'
-    compile 'com.google.dexmaker:dexmaker:1.1'
     compile 'org.easymock:easymock:3.4'
 }
