--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = volley
 	url = https://android.googlesource.com/platform/frameworks/volley
 	branch = master
+[submodule "android/volley"]
+	path = android/volley
+	url = https://android.googlesource.com/platform/frameworks/volley
+	branch = master
