--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.bizu"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -35,11 +35,12 @@ dependencies {
     testCompile 'org.easymock:easymock:3.4'
     androidTestCompile 'junit:junit:4.12'
     androidTestCompile 'org.easymock:easymock:3.4'
-    compile 'com.google.code.gson:gson:2.2.+'
     compile project(':volley')
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.android.support:support-v4:23.1.0'
-    compile 'com.android.support:recyclerview-v7:23.0.+'
+    compile 'com.google.code.gson:gson:2.2.+'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'org.easymock:easymock:3.4'
+    compile 'com.android.support:design:23.1.1'
 }
