--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,41 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bizu" >
+    package="com.bizu">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.CompactMenu" >
+        android:theme="@style/Theme.AppCompat.CompactMenu">
         <activity
             android:name=".question.service.download.MainActivity"
-            android:label="@string/app_name"
-            >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity android:name=".question.controller.ItemServiceActivity"
-            android:launchMode="singleTop"></activity>
-        <activity android:name=".question.service.questions.QuestoesActivity"
-            android:launchMode="singleTop"></activity>
-        <activity android:name=".question.controller.ShowAllQuestions"
-            android:launchMode="singleTop"></activity>
-        <activity android:name=".question.controller.FullscreenActivity"
-            android:theme="@style/Theme.AppCompat"
-            android:launchMode="singleTop"></activity>
-        <activity android:name=".question.controller.ItensSimpleShowActivity"
-            android:theme="@style/Theme.AppCompat"
-            android:launchMode="singleTop"></activity>
-
-
+        <activity
+            android:name=".question.controller.ItemServiceActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".question.service.questions.QuestoesActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".question.controller.ShowAllQuestions"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".question.controller.FullscreenActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".question.controller.ItensSimpleShowActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".question.controller.SwipeQuestionResolutionActivity"
+            android:label="@string/title_activity_swipe_question_resolution"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
-    
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
